src/tests/cases/snapshots/diskonaut__tests__cases__ui__small_width.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total: 20.0K | /tmp/diskonaut_tests/small_width  
┌────────────────────────────────────────────────┐
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                     file2                      │
│                                                │
│                   8.0K (40%)                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
├────────────────────────────────────────────────┤
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                     file3                      │
│                                                │
│                                                │
│                   8.0K (40%)                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
├────────────────────────────────────────────────┤
│                                                │
│                                                │
│                     file1                      │
│                                                │
│                                                │
│                   4.0K (20%)                   │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
                                                  
 ←↓↑→/<ENTER>/<ESC>: navigate, <BACKSPACE>: del
