src/tests/cases/snapshots/diskonaut__tests__cases__ui__two_large_files_one_small_file.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total: 20.0K (3 files), freed: 0 | /tmp/diskonaut_tests/two_large_files_one_small_file                                                                                                       
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬─────────────────────────────────────┐
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                        file2                                                                         │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                      8.0K (40%)                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                file1                │
├──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤                                     │
│                                                                                                                                                      │             4.0K (20%)              │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                        file3                                                                         │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                      8.0K (40%)                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
│                                                                                                                                                      │                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴─────────────────────────────────────┘
                                                                                                                                                                                              
 <arrows> - move around, <ENTER> - enter folder, <ESC> - parent folder, <BACKSPACE> - delete, <+/-/0> - zoom in/out/reset, <q> - quit, <Q> - quit immediately
